License and author

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hyperlevel-backup-to-s3",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Backup level-hyper db to Amazon S3",
   "main": "index.js",
   "scripts": {
@@ -10,8 +10,7 @@
     "type": "git",
     "url": "git://github.com/micnews/hyperlevel-backup-to-s3.git"
   },
-  "private": true,
-  "author": "policymic.com",
+  "author": "Mic Network, Inc",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/micnews/hyperlevel-backup-to-s3/issues"
